<resources>
    <string name="app_name">Diabetus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DEMO</string>
    <string name="defaultDate">2022.07.22.</string>
    <string name="date">Date</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="time">Time</string>
    <string name="DateFormat">xxxx.xx.xx</string>
    <string name="DefaultDecimal">0.0</string>
    <string name="DefaultNumber">0</string>
    <string name="TimeFormat">xx:xx</string>
    <string name="save">Save</string>
    <string name="diary_entry">Diary Entry</string>
    <string name="diary">Diary</string>
    <string name="add">Add</string>
    <string name="rapid_insulin">Rapid Insulin</string>
    <string name="basal_insulin">Basal Insulin</string>
    <string name="delete">Delete</string>
    <string name="Weight">Weight</string>
    <string name="Category">Category</string>
    <string name="Name">Name</string>
    <string name="Calorie">Calorie</string>
    <string name="Brand">Brand</string>
    <string name="Empty"> </string>
    <string name="sodium">Sodium</string>
    <string name="carb">Carb</string>
    <string name="sugar">Sugar</string>
    <string name="fiber">Fiber</string>
    <string name="protein">Protein</string>
    <string name="trans_fat">Trans fat</string>
    <string name="unsaturated_fat">Unsaturated fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="gram">Gram</string>
    <string name="piece">Piece</string>
    <string name="meal">Meal</string>
    <string name="save_meal">Add meal to database</string>
    <string name="button">Button</string>
    <string name="food_editor">Food editor</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_food">Add Food</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="food">Food</string>
    <string name="meal_editor">Meal editor</string>
    <string name="food_list">Food list</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="sign_in">Sign in</string>
    <string name="upload">Upload</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="fat">Fat</string>
    <string name="Note">Note</string>
    <string name="sign_out">Sign out</string>
    <string name="database">Database</string>
    <string name="_90_day">90 day</string>
    <string name="_30_day">30 day</string>
    <string name="_7_day">7 day</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="delete_meal">Delete meal</string>
</resources>